# vscode-docker-envs

./: .dev.env  .gitignore  .prd.env  .pylintrc  .vimrc  Dockerfile  Dockerfile.source  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.tool.txt  start.sh
.devcontainer/: devcontainer.json
git/: Dockerfile
git/.devcontainer/: devcontainer.json
nodejs/: Dockerfile  index.js  package-lock.json  package.json
nodejs/.devcontainer/: devcontainer.json
python/: Dockerfile  notebook1.ipynb  notebook1.py  requirements.dev.txt  requirements.tool.txt  requirements.txt  run.py  start.sh  tools_requirements.txt
python/.devcontainer/: devcontainer.json
python/server/: main.py
react/: .eslintrc.js  Dockerfile  README.md
react/.devcontainer/: devcontainer.json
react/rh-in-action/: package-lock.json  package.json
react/rh-in-action/src/components/: App.js
